--- a/index.html
+++ b/index.html
@@ -33,53 +33,58 @@
                 </nav>
             </div>
 
-
-
-
      <!--carousel  -->
-
-     <div id="carouselContent" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <p>Whatever your <span>OCCASION</span>, <br>
-                        <span>TASTE</span> 
-                        <span>makes</span> 
-                         it one to 
-                        <span>remember!</span> 
-                    </p>
-                    <button type="button" class="btn btn-light">PURCHASE THEM</button>
-                    <button type="button" class="btn btn-danger rounded">LEARN MORE</button>
+     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="carousel-caption d-none d-md-block d-block w-100 h-100 text-primary" alt="First slide">
+                    <h5>...</h5>
+                    <p>...</p>
                 </div>
-                <div class="carousel-item active">
-                    <p>Whatever your <span>OCCASION</span>, <br>
-                        <span>TASTE</span> 
-                        <span>makes</span> 
-                         it one to 
-                        <span>remember!</span> 
-                    </p>
-                    <button type="button" class="btn btn-light">PURCHASE THEM</button>
-                    <button type="button" class="btn btn-danger rounded">LEARN MORE</button>
-                </div>
-                <div class="carousel-item active">
-                    <p>Whatever your <span>OCCASION</span>, <br>
-                        <span>TASTE</span> 
-                        <span>makes</span> 
-                         it one to 
-                        <span>remember!</span> 
-                    </p>
-                    <button type="button" class="btn btn-light">PURCHASE THEM</button>
-                    <button type="button" class="btn btn-danger rounded">LEARN MORE</button>
-                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                        <h5>...</h5>
+                        <p>...</p>
+                    </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                        <h5>...</h5>
+                        <p>...</p>
+                    </div>  
+              </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
             </a>
-        </div>
+          </div>
+
+
+
+
+
+     <!-- <p>Whatever your <span>OCCASION</span>, <br>
+                        <span>TASTE</span> 
+                        <span>makes</span> 
+                         it one to 
+                        <span>remember!</span> 
+                    </p>
+                    <button type="button" class="btn btn-light">PURCHASE THEM</button>
+                    <button type="button" class="btn btn-danger rounded">LEARN MORE</button> -->
+
 
 
     </div>
