--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <div class="row justify-content-center align-items-center grd_nav mt-4">
                         <nav class="nav">
                             <a class="nav-link" href="#">HOME</a>
-                            <a class="nav-link" href="#">ABOUT US</a>
-                            <a class="nav-link" href="#">MENU LIST</a>
+                            <a class="nav-link" href="#s1">ABOUT US</a>
+                            <a class="nav-link" href="#menu">MENU LIST</a>
                             <a class="nav-link" href="#">TEAM</a>
                         </nav>
                         <div class="">
@@ -52,7 +52,7 @@
                           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
+                          <div class="carousel-item active text-center carousel_text">
                                 <p class="text-white">Whatever your <span>OCCASION</span>, <br>
                                     <span>TASTE</span> 
                                     <span>makes</span> 
@@ -62,7 +62,7 @@
                                 <button type="button" class="btn btn-light">PURCHASE THEM</button>
                                 <button type="button" class="btn btn-danger rounded">LEARN MORE</button>
                           </div>
-                          <div class="carousel-item">
+                          <div class="carousel-item text-center carousel_text">
                                 <p class="text-white">Whatever your <span>OCCASION</span>, <br>
                                     <span>TASTE</span> 
                                     <span>makes</span> 
@@ -72,7 +72,7 @@
                                 <button type="button" class="btn btn-light">PURCHASE THEM</button>
                                 <button type="button" class="btn btn-danger rounded">LEARN MORE</button>
                           </div>
-                          <div class="carousel-item">
+                          <div class="carousel-item text-center carousel_text">
                               <p class="text-white">Whatever your <span>OCCASION</span>, <br>
                                     <span>TASTE</span> 
                                     <span>makes</span> 
@@ -93,7 +93,7 @@
                         </a>
                       </div>
                       <div>
-                          <div class="header_bottom_deco"></div>
+                          <div class="header_bottom_deco"> <img src="./public/images/bottom_decoration_img.png" alt=""></div>
                       </div>
 
 
@@ -130,7 +130,7 @@
                             debitis! Expedita neque omnis<br> nihil, earum ipsum sequi nobis accusantium, ab veritatis,
                             quasi optio repellendus maxime <br>illum quisquam corporis architecto perferendis! Rem, nam
                             officiis repellendus provident<br> numquam dolores quod reiciendis.</p>
-                        <h1 class="mx-2">OUR Menu list</h1>
+                        <h1 id="menu" class="mx-2">OUR Menu list</h1>
                         <img class="mx-2" src="./public/images/decoration_line.png" alt="">
 
                     </div>
@@ -460,7 +460,6 @@
     <!-- footer -->
     <footer id="footer"> 
         <div class="footer">  
-            
             <div class="container">
                 <div class="row pb-4">
                     <div class="col-4">
