--- a/index.html
+++ b/index.html
@@ -20,9 +20,62 @@
 
         <div class="container-fluid ">
 
-            <nav class="" >
+                <nav class="navbar navbar-expand-lg navbar-dark ">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                          <ul class="navbar-nav justify-content-around">
+                            <li class="nav-item active">
+                                    <a class="nav-link" href="#">HOME</a>                            
+                            </li>
+                            <li class="nav-item active">
+                                    <a class="nav-link" href="#s1">ABOUT US</a>
+                            </li>
+                            <li class="nav-item active">
+                                    <a class="nav-link" href="#menu">MENU LIST</a>
+                            </li>
+                            <li class="nav-item active">
+                                    <a class="nav-link " href="#">TEAM</a>
+                            </li>
+                          </ul>
 
-                <ul>
+                          <div>
+                                <img class="text-dark px-1 m-3" src="./public/images/logo.png" alt="">
+                            </div>
+
+
+                          <ul class="navbar-nav justify-content-around">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">RESERVATION</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">BLOG</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">TESTIMONIALS</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">CONTACT US</a>
+                                </li>
+                              </ul>
+                        </div>
+                      </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+            <!-- <nav class="" >
+
+                <ul class="nav_ul_1">
                     <a class="nav-link" href="#">HOME</a>
                     <a class="nav-link" href="#s1">ABOUT US</a>
                     <a class="nav-link" href="#menu">MENU LIST</a>
@@ -35,13 +88,13 @@
                 </div>
 
 
-                <ul>
+                <ul class="nav_ul_2">
                     <a class="nav-link" href="#">RESERVATION</a>
                     <a class="nav-link" href="#">BLOG</a>
                     <a class="nav-link" href="#">TESTIMONIALS</a>
                     <a class="nav-link" href="#">CONTACT US</a>
                 </ul>
-            </nav>
+            </nav> -->
 
 
             <!--carousel  -->
