--- a/index.html
+++ b/index.html
@@ -1002,29 +1002,32 @@
                     class="s3_deco_line ligne_deco" src="./public/images/decoration_line.png" alt=""></h1>
             <div class="container">
                 <div class="row ">
-                    <div class="col-6 px-0 ">
+                    <div class="col-lg-6 col-md-12 px-0 s3_blog_decriptif ">
                         <img class="s3_photo_blog" src="./public/images/blog_img1.jpg" alt="">
-                        <div>
-                            <p class="s3_info_blog bg-danger text-white-50"><span class="blog_number">12</span>April
-                                2017/<span class="blog_number"> 20</span>Comment / <span
-                                    class="blog_number">35</span>likes</p>
-                        </div>
-
-                        <div class="s3_text_blog">
-                            <h5>Lorem, ipsum</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, exercitationem!</p>
+                        <div class="row s3_blog_bas justify-content-center ">
+                            <div class="">
+                                <p class="s3_info_blog bg-danger text-white-50"><span class="blog_number">12</span>April
+                                   2017/<span class="blog_number"> 20</span>Comment / <span
+                                        class="blog_number">35</span>likes</p>
+                            </div>
+                            <div class="s3_text_blog">
+                                <h5>Lorem, ipsum</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, exercitationem!</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-6 px-0">
-                        <img class="s3_photo_blog" src="./public/images/blog_img2.jpg" alt="">
-                        <div>
-                            <p class="s3_info_blog bg-danger text-white-50"><span class="blog_number">12</span>April
-                                2017/<span class="blog_number"> 20</span>Comment / <span
-                                    class="blog_number">35</span>likes</p>
-                        </div>
-                        <div class="s3_text_blog">
-                            <h5>Lorem, ipsum</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, exercitationem!</p>
+                    <div class="col-lg-6 col-md-12 px-0 s3_blog_decriptif ">
+                        <img class="s3_photo_blog" src="./public/images/blog_img1.jpg" alt="">
+                        <div class="row s3_blog_bas justify-content-center ">
+                            <div class="">
+                                <p class="s3_info_blog bg-danger text-white-50"><span class="blog_number">12</span>April
+                                   2017/<span class="blog_number"> 20</span>Comment / <span
+                                        class="blog_number">35</span>likes</p>
+                            </div>
+                            <div class=" s3_text_blog">
+                                <h5>Lorem, ipsum</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, exercitationem!</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -1042,10 +1045,10 @@
 
         <div class="container ">
             <div class="row justify-content-around">
-                <div class="col-2">
+                <div class="col-lg-2 col-sm-12">
                     <img class="s4_img_testimonial" src="./public/images/testimonial1.jpg" alt="">
                 </div>
-                <div class="col-3 s4_text_testimonial">
+                <div class="col-lg-3 col-sm-12 s4_text_testimonial">
                     <div class="mt-3">
                         <h5>Lorem ipsum</h5>
                         <p class="text-danger">Manager</p>
@@ -1053,7 +1056,7 @@
                                 amet quae, cum aperiam earum?</small></p>
                     </div>
                 </div>
-                <div class="col-3 offset-1 s4_text_testimonial">
+                <div class="col-lg-3 col-sm-12 offset-1 s4_text_testimonial">
                     <div class="mt-3">
                         <h5>Lorem ipsum</h5>
                         <p class="text-danger">Manager</p>
@@ -1061,7 +1064,7 @@
                                 amet quae, cum aperiam earum?</small></p>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-lg-2 col-sm-12">
                     <img class="s4_img_testimonial" src="./public/images/testimonial1.jpg" alt="">
                 </div>
 
@@ -1100,7 +1103,7 @@
         <div class="footer pt-4">
             <div class="container">
                 <div class="row pb-4">
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12">
                         <p>ABOUT US</p>
                         <p><small> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis libero
                                 exercitationem, quaerat non quia deleniti inventore minus nostrum, similique aut enim
@@ -1112,7 +1115,7 @@
                             <i class="mr-4 fab fa-linkedin-in "></i>
                         </p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12">
                         <p>INSTAGRAM</p>
                         <div class="row">
                             <img class="p-1" src="./public/images/instragram_gallery_img1.jpg" alt="">
@@ -1127,7 +1130,7 @@
                             <img class="p-1" src="./public/images/instragram_gallery_img1.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-12">
                         <p>POPULAR TAGS</p>
                         <div class="">
                             <div class="row">
