ajout ancres dans nav

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#menu">MENU LIST</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link " href="#">TEAM</a>
+                            <a class="nav-link " href="#s2">TEAM</a>
                         </li>
                     </ul>
 
@@ -48,16 +48,16 @@
 
                     <ul class="navbar-nav justify-content-around">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">RESERVATION</a>
+                            <a class="nav-link" href="#s3">RESERVATION</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link" href="#blog">BLOG</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">TESTIMONIALS</a>
+                            <a class="nav-link" href="#s4">TESTIMONIALS</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">CONTACT US</a>
+                            <a class="nav-link" href="#s5">CONTACT US</a>
                         </li>
                     </ul>
                 </div>
@@ -141,7 +141,7 @@
                         accusantium, ab veritatis, quasi optio repellendus maxime illum quisquam corporis architecto
                         perferendis! Rem, nam officiis repellendus provident numquam dolores quod reiciendis Lorem ipsum
                         dolor sit amet consectetur adipisicing elit. Dolorem, quas. </p>
-                    <h1 class="mt-5 text-body courgette"> <span class="text-danger">OUR</span> Menu List</h1>
+                    <h1 id="menu" class="mt-5 text-body courgette"> <span class="text-danger">OUR</span> Menu List</h1>
                     <img class="mx-2 ligne_deco" src="./public/images/decoration_line.png" alt="">
 
                 </div>
@@ -998,7 +998,7 @@
             </div>
 
 
-            <h1 class="text-center mt-5 courgette"> <span class="text-danger">OUR</span> blog <br><img
+            <h1 id="blog" class="text-center mt-5 courgette"> <span class="text-danger">OUR</span> blog <br><img
                     class="s3_deco_line ligne_deco" src="./public/images/decoration_line.png" alt=""></h1>
             <div class="container">
                 <div class="row ">
@@ -1156,11 +1156,6 @@
         <div class="footer_end bg-danger"> </div>
 
     </footer>
-
-
-
-
-
 
 
 
